# snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
config/: config.json
src/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/food/: CMakeLists.txt  food.cpp  food.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp
src/snake/: CMakeLists.txt  snake.cpp  snake.hpp
src/utils/: utils.hpp
